fix: container alignment

--- a/css/main.css
+++ b/css/main.css
@@ -45,10 +45,8 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center; */
-    display:block;
-    text-align: center;
     margin: auto;
-    width: 700px;
+    max-width: 600px;
 }
 .container-fluid {
     padding-left: 1rem;
@@ -125,5 +123,6 @@ header h3{
     background-image: linear-gradient(to bottom left, var(--secondary-color), var(--primary-color));
     border-top-right-radius: 1rem;
     font-weight: bold;
-    padding: 2rem;
+    padding: 4rem 1em;
+    text-align: center;
 }
